--- a/assets/Applio.ipynb
+++ b/assets/Applio.ipynb
@@ -2,35 +2,6 @@
   "cells": [
     {
       "cell_type": "markdown",
-      "metadata": {
-        "id": "ymhGfgFSR17k"
-      },
-      "source": [
-        "## **Applio**\n",
-        "A simple, high-quality voice conversion tool focused on ease of use and performance.\n",
-        "\n",
-        "[Support](https://discord.gg/urxFjYmYYh) — [GitHub](https://github.com/IAHispano/Applio) — [Terms of Use](https://github.com/IAHispano/Applio/blob/main/TERMS_OF_USE.md)\n",
-        "\n",
-        "<br>\n",
-        "\n",
-        "---\n",
-        "\n",
-        "<br>\n",
-        "\n",
-        "#### **Acknowledgments**\n",
-        "\n",
-        "To all external collaborators for their special help in the following areas:\n",
-        "* Hina (Encryption method)\n",
-        "* Poopmaster (Extra section)\n",
-        "* Shirou (UV installer)\n",
-        "* Bruno5430 (AutoBackup code and general notebook maintenance)\n",
-        "\n",
-        "#### **Disclaimer**\n",
-        "By using Applio, you agree to comply with ethical and legal standards, respect intellectual property and privacy rights, avoid harmful or prohibited uses, and accept full responsibility for any outcomes, while Applio disclaims liability and reserves the right to amend these terms."
-      ]
-    },
-    {
-      "cell_type": "markdown",
       "source": [
         "### **Install Applio**\n",
         "If the runtime restarts, re-run the installation steps."
@@ -262,7 +233,7 @@
         "\n",
         "method = \"gradio\"  # @param [\"gradio\", \"localtunnel\", \"ngrok\"]\n",
         "ngrok_token = \"If you selected the 'ngrok' method, obtain your auth token here: https://dashboard.ngrok.com/get-started/your-authtoken\" # @param {type:\"string\"}\n",
-        "tensorboard = True #@param {type: \"boolean\"}\n",
+        "tensorboard = False #@param {type: \"boolean\"}\n",
         "\n",
         "%cd /content/{repo_name}\n",
         "clear_output()\n",
